# nrf-resonant-thing-example

./: Cargo.toml  Embed.toml  chips.txt
.cargo/: config.toml
src/: main.rs
