[package]
name = "nrf-resonant-thing-example"
version = "0.1.0"
authors = ["jens <jens@lea.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.7"
cortex-m-rt = "0.6.15"
nrf52840-hal = "0.13.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-probe = { version = "0.2", features = ["print-rtt"] }

[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden

[profile.release]
debug = 1 # default is `false`; using `true` is also OK as symbols reside on the host, not the target
